fix footer align

--- a/style/_contact.scss
+++ b/style/_contact.scss
@@ -7,6 +7,13 @@
 		width: 100%;
 		display: flex;
 		flex-direction: column;
+		margin: 3rem auto;
+		@include xs {
+			margin: 1.5rem auto;
+		}
+		@include md {
+			margin: 3rem auto;
+		}
 	}
 
 	.grid-row {
