--- a/style/style.css
+++ b/style/style.css
@@ -190,16 +190,10 @@ button:hover::before,
   }
 }
 
-.main-header nav ul#main-nav .responsive .menu-toggle {
-  position: absolute;
-  right: 0;
-  top: 0;
-}
-
 .main-header nav ul#main-nav.responsive .menu-toggle {
   position: absolute;
   right: 0;
-  top: 0;
+  top: 100px;
 }
 
 .main-header nav ul#main-nav.responsive li {
@@ -722,6 +716,19 @@ a {
   width: 100%;
   display: flex;
   flex-direction: column;
+  margin: 3rem auto;
+}
+
+@media (min-width: 500px) {
+  .contact .contact-content {
+    margin: 1.5rem auto;
+  }
+}
+
+@media (min-width: 768px) {
+  .contact .contact-content {
+    margin: 3rem auto;
+  }
 }
 
 .contact .grid-row {
@@ -866,10 +873,24 @@ a {
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
-  font-size: 0.9375rem;
+  font-size: 0.9rem;
   margin: 0 18px;
   text-align: left;
   flex-basis: 16%;
+}
+
+@media (min-width: 500px) {
+  .ftr-nav-col {
+    margin-bottom: 2rem;
+    flex-basis: 38%;
+  }
+}
+
+@media (min-width: 768px) {
+  .ftr-nav-col {
+    margin: 0 18px;
+    flex-basis: 16%;
+  }
 }
 
 .ftr-nav-col.logo-social {
